--- a/ccy-viz-app/package.json
+++ b/ccy-viz-app/package.json
@@ -11,7 +11,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +47,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "react-scripts": "^2.1.3"
   }
 }
