--- a/ccy-viz-app/package.json
+++ b/ccy-viz-app/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "ify-loader": "^1.1.0",
     "plotly.js": "^2.14.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,13 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@types/react-plotly.js": "^2.5.2",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
-    "prettier": "^2.7.1",
-    "react-scripts": "^2.1.3"
+    "prettier": "^2.7.1"
   }
 }
